css/index.css
body {
  background-color: #7F8F9F;
}

.header {
  background-image: url("img/header.jpg");
  text-align: center;
  background-size: 100% 100%;
  background-repeat: no-repeat;
  background-position: center center;
  margin-bottom: 0;
  height: 100%;
}

.name {
  padding-top: 50px;
  font-family: 'Timmana', sans-serif;
  font-size: 100px;
  color: #000099;
  text-shadow: 6px 6px 0px rgba(0,0,0,0.2);
}

.contact {
  border-left: 6px solid #33ccff;
}

.code-icon {
  color: black;
  font-size: 30px;
  margin-right: 30px;
}

.code-icon img {
  width: 30px;
}

.description {
  font-family: 'Timmana', sans-serif;
  font-size: 30px;
  color: black;
}

.first-line {
  width: 80%;
  height: 6px;
  background: url(http://ibrahimjabbari.com/english/images/hr-11.png) repeat-x 0 0;
  border: 0;
}

.second-line {
  width: 90%;
}

/* For the clickable icons */
.icons {
  font-size: 40px;
  margin-top: 40px;
  padding-bottom: 30px;
  text-align: center;
}

.github {
  color: #000000;
}

.github:hover {
  color: #737373;
}

.glow {
  color: #444;
  text-shadow:
    1px 0px 1px #ccc, 0px 1px 1px #eee,
    2px 1px 1px #ccc, 1px 2px 1px #eee,
    3px 2px 1px #ccc, 2px 3px 1px #eee,
    4px 3px 1px #ccc, 3px 4px 1px #eee,
    5px 4px 1px #ccc, 4px 5px 1px #eee,
    6px 5px 1px #ccc, 5px 6px 1px #eee,
    7px 6px 1px #ccc;
}

/* top, right, bottom, left */
.card {
  color: black;
  margin-top: 20px;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  transition: 0.3s;
  border-radius: 5px; /* 5px rounded corners */
}

/* spaces out the cards neatly */
.row > div[class*='col-'] {
  display: flex;
  flex:1 0 auto;
}

.card-img-top {
    height: 15rem;
    object-fit: cover;
}

.date {
  margin-bottom: 20px;
}

/* description styles */
.project-description {
  margin-top: 30px;
  text-align: left;
}

.info {
  text-align: left;
}


/* making the buttons rounded */
.btn {
    padding: 10px 15px;
    border: 0 none;
    font-weight: 400;
    text-transform: uppercase;
}

.btn:focus, .btn:active:focus, .btn.active:focus {
    outline: 0 none;
}

.btn-primary {
    background: #0099cc;
    color: #ffffff;
}

.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
    background: #33a6cc;
}

.btn-primary:active, .btn-primary.active {
    background: #007299;
    box-shadow: none;
}

.btn-lg.round {
	border-radius: 24px;
}

